Use reduced kernel package (without git information)

--- a/bsp/mach-am5728-tievm/Make.conf
+++ b/bsp/mach-am5728-tievm/Make.conf
@@ -6,7 +6,7 @@ BOOTLOADER?=u-boot-2015.07-2_am57xx_TI_sdk-02.00.01.07
 KERNEL?=linux-4.1.13_am57xx_TI_sdk-02.00.01.07
 INSTALLER?=openfd
 TOOLCHAIN?=linaro
-KERNEL_TARBALL=linux-4.1.13_am57xx_TI_sdk-02.00.01.07.tar.gz
+KERNEL_TARBALL=linux-4.1.13-am57xx-8dc66170d9.tar.gz
 BOOTLOADER_TARBALL=u-boot-2015.07-2_am57xx_TI_sdk-02.00.01.07.tar.gz
 LOGFILE?=/dev/null
 EXTRA_PARAMS?=
